--- a/index.html
+++ b/index.html
@@ -63,32 +63,34 @@
                 <h2 hidden>features</h2>
 
                 <ul class="secondary-conteiner">
-                    <li>
-                        <h3 class="text-strategy">Strategy</h3>
-                        <p class="paragraf-strategy">Our goal is to identify the business
+                    <li class="li-sekondary-conteiner">
+                        <h3 class="text-secondary-conteiner">Strategy</h3>
+                        <p class="paragraf-text-sekondary">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
 
                     </li>
-                    <li>
-                        <h3 class="text-pun">Punctuality</h3>
-                        <p class="paragraf-pun">Bring the key message to the brand's audience for the best price
+                    <li class="li-sekondary-conteiner">
+                        <h3 class="text-secondary-conteiner">Punctuality</h3>
+                        <p class="paragraf-text-sekondary">Bring the key message to the brand's audience for the best
+                            price
                             within
                             the
                             shortest possible
                             time.</p>
 
                     </li>
-                    <li>
-                        <h3 class="text-diligence">Diligence</h3>
-                        <p class="paragraf-diligence">Research and confirm brands that present the strongest digital
+                    <li class="li-sekondary-conteiner">
+                        <h3 class="text-secondary-conteiner">Diligence</h3>
+                        <p class="paragraf-text-sekondary">Research and confirm brands that present the strongest
+                            digital
                             growth
                             opportunities and minimize
                             risk.</p>
 
                     </li>
-                    <li>
-                        <h3 class="text-technologies">Technologies</h3>
-                        <p class="paragraf-technologies">Design practice focused on digital experiences. We bring
+                    <li class="li-sekondary-conteiner">
+                        <h3 class="text-secondary-conteiner">Technologies</h3>
+                        <p class="paragraf-text-sekondary">Design practice focused on digital experiences. We bring
                             forth a
                             deep
                             passion for
@@ -103,44 +105,44 @@
 
         </section>
         <!-- Приклади роботи3  -->
-        <section class="section">
+        <section class="section non-padding">
             <div class="conteiner">
+
                 <h2 class="page-waw-doing">What Are We Doing</h2>
                 <ul class="foto-section">
                     <li class="img-sl"><img src="./images/sl_1.jpg" alt="computer" width="360" height="300"></li>
 
-                    <li class="img-sl"><img src="./images/sl_2.jpg" alt="mobile softvar" width="360" height="300"></li>
+                    <li class="img-sl"><img src="./images/sl_2.jpg" alt="mobile softvar" width="360" height="300">
+                    </li>
                     <li class="img-sl"><img src="./images/sl_3.jpg" alt="smartphone" width="360" height="300"></li>
                 </ul>
+
             </div>
         </section>
         <!-- група4 -->
-        <section class="section">
+        <section class="section section-background">
             <div class="conteiner">
                 <h2 class="team">Our Team</h2>
                 <ul class="team-conteiner">
                     <li class="team-item">
-                        <img class="foto-tim-main-m" src="./images/img_1.jpg" alt="Mark Guerrero" width="264"
-                            height="260">
-                        <h3 class="piple-m">Mark Guerrero</h3>
-                        <p class="paragraf-product">Product Designer</p>
+                        <img class="foto-team" src="./images/img_1.jpg" alt="Mark Guerrero" width="264" height="260">
+                        <h3 class="piple">Mark Guerrero</h3>
+                        <p class="paragraf">Product Designer</p>
                     </li>
                     <li class="team-item">
-                        <img class="foto-tim-main-t" src="./images/img_2.jpg" alt="Tom Ford" width="264" height="260">
-                        <h3 class="piple-t">Tom Ford</h3>
-                        <p class="paragraf-frontend">Frontend Developer</p>
+                        <img class="foto-team" src="./images/img_2.jpg" alt="Tom Ford" width="264" height="260">
+                        <h3 class="piple">Tom Ford</h3>
+                        <p class="paragraf">Frontend Developer</p>
                     </li>
                     <li class="team-item">
-                        <img class="foto-tim-main-c" src="./images/img_3.jpg" alt="Camila Garcia" width="264"
-                            height="260">
-                        <h3 class="piple-c">Camila Garcia</h3>
-                        <p class="paragraf-marketing">Marketing</p>
+                        <img class="foto-team" src="./images/img_3.jpg" alt="Camila Garcia" width="264" height="260">
+                        <h3 class="piple">Camila Garcia</h3>
+                        <p class="paragraf">Marketing</p>
                     </li>
                     <li class="team-item">
-                        <img class="foto-tim-main-d" src="./images/img_4.jpg" alt="Daniel Wilson" width="264"
-                            height="260">
-                        <h3 class="piple-d">Daniel Wilson</h3>
-                        <p class="paragraf-ui">UI Designer</p>
+                        <img class="foto-team" src="./images/img_4.jpg" alt="Daniel Wilson" width="264" height="260">
+                        <h3 class="piple">Daniel Wilson</h3>
+                        <p class="paragraf">UI Designer</p>
                     </li>
 
                 </ul>
@@ -149,7 +151,9 @@
     </main>
     <footer class="footer-fon">
         <div class="conteiner">
-            <a href="./index.html" class="logo-first">WEB<span class="logo-second-f">STUDIO</span></a>
+            <div class="footer-mar"><a href="./index.html" class="logo-first">WEB<span
+                        class="logo-second-f">STUDIO</span></a></div>
+
             <P class="footer-p">Increase the flow of customers and sales for your business with digital marketing &
                 growth
                 solutions.</P>
