--- a/index.html
+++ b/index.html
@@ -126,23 +126,35 @@
                 <ul class="team-conteiner">
                     <li class="team-item">
                         <img class="foto-team" src="./images/img_1.jpg" alt="Mark Guerrero" width="264" height="260">
-                        <h3 class="piple">Mark Guerrero</h3>
-                        <p class="paragraf">Product Designer</p>
+                        <div class="our-team">
+                            <h3 class="piple">Mark Guerrero</h3>
+                            <p class="paragraf">Product Designer</p>
+                        </div>
+
                     </li>
                     <li class="team-item">
                         <img class="foto-team" src="./images/img_2.jpg" alt="Tom Ford" width="264" height="260">
-                        <h3 class="piple">Tom Ford</h3>
-                        <p class="paragraf">Frontend Developer</p>
+                        <div class="our-team">
+                            <h3 class="piple">Tom Ford</h3>
+                            <p class="paragraf">Frontend Developer</p>
+                        </div>
+
                     </li>
                     <li class="team-item">
                         <img class="foto-team" src="./images/img_3.jpg" alt="Camila Garcia" width="264" height="260">
-                        <h3 class="piple">Camila Garcia</h3>
-                        <p class="paragraf">Marketing</p>
+                        <div class="our-team">
+                            <h3 class="piple">Camila Garcia</h3>
+                            <p class="paragraf">Marketing</p>
+                        </div>
+
                     </li>
                     <li class="team-item">
                         <img class="foto-team" src="./images/img_4.jpg" alt="Daniel Wilson" width="264" height="260">
-                        <h3 class="piple">Daniel Wilson</h3>
-                        <p class="paragraf">UI Designer</p>
+                        <div class="our-team">
+                            <h3 class="piple">Daniel Wilson</h3>
+                            <p class="paragraf">UI Designer</p>
+                        </div>
+
                     </li>
 
                 </ul>
