--- a/portfolio.html
+++ b/portfolio.html
@@ -52,76 +52,77 @@
                     <li><button type="button" class="but-marketing">Marketing</button></li>
                 </ul>
             </div>
-        </section>
-        <section class="section-foto">
+
+
             <div class="conteiner">
                 <ul class="service-conteiner">
                     <li class="name-info"><img class="foto-portfolio" src="./images/foto9.jpg"
                             alt="Banking App Interface Concept" width="360" height="300">
                         <div class="border-text">
-                            <h2 class="text-name-ban">Banking App Interface Concept</h2>
+                            <h2 class="text-name">Banking App Interface Concept</h2>
                             <p class="paragraf-portfolio-a">App</p>
                         </div>
                     </li>
                     <li class="name-info"><img class="foto-portfolio" src="./images/foto8.jpg" alt="Cashless Payment"
                             width="360" height="300">
                         <div class="border-text">
-                            <h2 class="text-name-cash">Cashless Payment</h2>
+                            <h2 class="text-name">Cashless Payment</h2>
                             <p class="paragraf-portfolio-m">Marketing</p>
                         </div>
                     </li>
                     <li class="name-info"><img class="foto-portfolio" src="./images/foto7.jpg" alt="Meditaion App"
                             width="360" height="300">
                         <div class="border-text">
-                            <h2 class="text-name-app">Meditaion App</h2>
+                            <h2 class="text-name">Meditaion App</h2>
                             <p class="paragraf-portfolio-ap">App</p>
                         </div>
                     </li>
                     <li class="name-info"><img class="foto-portfolio" src="./images/foto6.jpg" alt="Taxi Service"
                             width="360" height="300">
                         <div class="border-text">
-                            <h2 class="text-name-taxi">Taxi Service</h2>
+                            <h2 class="text-name">Taxi Service</h2>
                             <p class="paragraf-portfolio-ma">Marketing</p>
                         </div>
                     </li>
                     <li class="name-info"><img class="foto-portfolio" src="./images/foto5.jpg"
                             alt="Screen Illustrations" width="360" height="300">
                         <div class="border-text">
-                            <h2 class="text-name-screen">Screen Illustrations</h2>
+                            <h2 class="text-name">Screen Illustrations</h2>
                             <p class="paragraf-portfolio-d">Design</p>
                         </div>
                     </li>
                     <li class="name-info"><img class="foto-portfolio" src="./images/foto4.jpg" alt="Online Courses"
                             width="360" height="300">
                         <div class="border-text">
-                            <h2 class="text-name-online">Online Courses</h2>
+                            <h2 class="text-name">Online Courses</h2>
                             <p class="paragraf-portfolio-mar">Marketing</p>
                         </div>
                     </li>
                     <li class="name-info"><img class="foto-portfolio" src="./images/foto3.jpg"
                             alt="Instagram Stories Concept" width="360" height="300">
                         <div class="border-text">
-                            <h2 class="text-name-inst">Instagram Stories Concept</h2>
+                            <h2 class="text-name">Instagram Stories Concept</h2>
                             <p class="paragraf-portfolio-de">Design</p>
                         </div>
                     </li>
                     <li class="name-info"><img class="foto-portfolio" src="./images/foto2.jpg" alt="Organic Food"
                             width="360" height="300">
                         <div class="border-text">
-                            <h2 class="text-name-organic">Organic Food</h2>
+                            <h2 class="text-name">Organic Food</h2>
                             <p class="paragraf-portfolio-w">Web Site</p>
                         </div>
                     </li>
                     <li class="name-info"><img class="foto-portfolio" src="./images/foto1.jpg" alt="Fresh Coffee"
                             width="360" height="300">
                         <div class="border-text">
-                            <h2 class="text-name-fresh">Fresh Coffee</h2>
+                            <h2 class="text-name">Fresh Coffee</h2>
                             <p class="paragraf-portfolio-we">Web Site</p>
                         </div>
                     </li>
                 </ul>
+            </div>
         </section>
-        </div>
+
 
 
 
